cmake_minimum_required (VERSION 3.1)
project (crap)

include_directories (test)

enable_testing()

function (crap_test name)
  add_executable (${name}test test/${name}test.cpp)
  add_test (${name} ${name}test)
endfunction()

crap_test(addsatvalue)
crap_test(bitceilvalue)
crap_test(bitfloorvalue)
crap_test(bitwidthvalue)
crap_test(ceiltype)
crap_test(countlonevalue)
crap_test(countlzerovalue)
crap_test(countronevalue)
crap_test(countrzerovalue)
crap_test(floortype)
crap_test(hassinglebitvalue)
crap_test(isheapuntilltype)
crap_test(isheapuntillvalue)
crap_test(modftype)
crap_test(popcountvalue)
crap_test(rotlvalue)
crap_test(rotrvalue)
crap_test(roundtype)
crap_test(saturatecastvalue)
crap_test(signbittype)
crap_test(subsatvalue)
crap_test(trunctype)
